--- a/index.html
+++ b/index.html
@@ -738,13 +738,13 @@ Deployed it using ECS with a scheduler which automatically triggers the service 
                                 <div class="py-1 education-content">
                                     <p>Achievements</p>
 <ul>
-<li>School topper amoong 200 students</li>
+<li>School topper among 200 students</li>
 <li>General Proficiency</li>
 <li>Proficiency in Maths and French</li>
 </ul>
 <p>Extracurricular Activities</p>
 <ul>
-<li>Captain of Diamond House</li>
+<li>House Captain</li>
 <li>Lead event organizer</li>
 </ul>
 
