--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Charanya SK Portfolio
                 <div class="row">
                     <div class="col-auto h-100">
                         
-                        <a href="https:///charanyask.github.io/assets/Resume.pdf" class="btn" download>
+                        <a href="https://charanyask.github.io/assets/Resume.pdf" class="btn" download>
                             Resume
                         </a>
                         
