--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Charanya SK Portfolio
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-9 pt-5 image animate px-5 px-md-5 px-lg-0 text-center">
-                        <img src="https:///charanyask.github.io/images/hero.jpeg" 
+                        <img src="https://github.com/charanya78/Charanya_Portfolio/blob/main/images/hero.jpeg" 
                             class="img-thumbnail mx-auto" 
                             alt=""
                         >
