--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Charanya SK Portfolio
             
             <div class="col-sm-12 col-md-8 col-lg-4 mb-5 mb-sm-0 mb-md-5 mb-lg-0 d-none d-sm-none d-md-block">
                 <div class="image d-flex px-5">
-                    <img src="https://charanyask.github.io/images/me.png" class="img-thumbnail mx-auto rounded-circle" alt="">
+                    <img src="https:///charanyask.github.io/images/me.jpg" class="img-thumbnail mx-auto rounded-circle" alt="">
                 </div>
             </div>
             
@@ -744,7 +744,7 @@ Deployed it using ECS with a scheduler which automatically triggers the service 
 </ul>
 <p>Extracurricular Activities</p>
 <ul>
-<li>House Captain</li>
+<li>Captain of Diamond House</li>
 <li>Lead event organizer</li>
 </ul>
 
@@ -770,7 +770,7 @@ Deployed it using ECS with a scheduler which automatically triggers the service 
             <div class="col-lg-4 col-md-6 my-3">
                 <div class="card my-3 h-100" title="Two-tiered approach to detect melanoma">
                     <div class="card-head">
-                        <img class="card-img-top" src="https://charanyask.github.io/images/projects/melanoma.PNG" alt="Two-tiered approach to detect melanoma">
+                        <img class="card-img-top" src="https:///charanyask.github.io/images/projects/melanoma.PNG" alt="Two-tiered approach to detect melanoma">
                     </div>
                     <div class="card-body bg-transparent p-3">
                         <div class="pb-2 bg-transparent">
