--- a/index.html
+++ b/index.html
@@ -534,11 +534,7 @@ Charanya SK Portfolio
             
             <div class="col-sm-12 col-md-8 col-lg-4 mb-5 mb-sm-0 mb-md-5 mb-lg-0 d-none d-sm-none d-md-block">
                 <div class="image d-flex px-5">
-<<<<<<< HEAD
                     <img src="https:///charanyask.github.io/images/me.jpg" class="img-thumbnail mx-auto rounded-circle" alt="">
-=======
-                    <img src="https:///charanyask.github.io/images/me.png" class="img-thumbnail mx-auto rounded-circle" alt="">
->>>>>>> 1171c6388ea28bd5c8f55e126a58b82f19bd3459
                 </div>
             </div>
             
@@ -748,7 +744,7 @@ Deployed it using ECS with a scheduler which automatically triggers the service 
 </ul>
 <p>Extracurricular Activities</p>
 <ul>
-<li>House Captain</li>
+<li>Captain of Diamond House</li>
 <li>Lead event organizer</li>
 </ul>
 
